<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

        <EditText
            android:id="@+id/webEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/websitetxt" />

        <Button
            android:id="@+id/webBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/websitebtn"
            android:onClick="openWebsite"/>

        <EditText
            android:id="@+id/locEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/loctxt" />

        <Button
            android:id="@+id/locBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/locbtn"
            android:onClick="openLocation"/>

        <EditText
            android:id="@+id/shareEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:text="@string/sharetxt" />

        <Button
            android:id="@+id/shareBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sharebtn"
            android:onClick="shareText"/>

        <Button
            android:id="@+id/picBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_a_picture"
            android:onClick="snapClick"/>

</LinearLayout>